src/OpenCvSharp.Native/include/open_cv_sharp/ximgproc/ximgproc.h

typedef struct jyppx_ocv_ximgproc_edge_aware_interpolator jyppx_ocv_ximgproc_edge_aware_interpolator;
typedef struct jyppx_ocv_ximgproc_ric_interpolator jyppx_ocv_ximgproc_ric_interpolator;
typedef struct jyppx_ocv_ximgproc_edge_drawing jyppx_ocv_ximgproc_edge_drawing;
typedef struct jyppx_ocv_ximgproc_point
{
    int x;
    int y;
} jyppx_ocv_ximgproc_point;
typedef struct jyppx_ocv_ximgproc_edge_drawing_params
{
    int pf_mode;
    int edge_detection_operator;
    int gradient_threshold_value;
    int anchor_threshold_value;
    int scan_interval;
    int min_path_length;
    float sigma;
    int sum_flag;
    int nfa_validation;
    int min_line_length;
    double max_distance_between_two_lines;
    double line_fit_error_threshold;
    double max_error_threshold;
} jyppx_ocv_ximgproc_edge_drawing_params;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_lambda(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_get_use_post_processing(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_use_post_processing(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_get_fgs_lambda(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_fgs_lambda(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_get_fgs_sigma(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_fgs_sigma(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_k(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_k(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_size(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_size(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_nn_count(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_nn_count(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_ruler(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_ruler(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_mode(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_mode(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_alpha(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_alpha(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_model_iter(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_model_iter(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_refine_models(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_refine_models(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_max_flow(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_max_flow(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_use_variational_refinement(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_use_variational_refinement(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_use_global_smoother_filter(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_use_global_smoother_filter(jyppx_ocv_ximgproc_ric_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_fgs_lambda(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_fgs_lambda(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_get_fgs_sigma(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_fgs_sigma(jyppx_ocv_ximgproc_ric_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_create(
    jyppx_ocv_ximgproc_edge_drawing** detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_edge_drawing_release_handle(
    jyppx_ocv_ximgproc_edge_drawing* detector);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_get_params(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    jyppx_ocv_ximgproc_edge_drawing_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_set_params(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    const jyppx_ocv_ximgproc_edge_drawing_params* params);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_detect_edges(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    const jyppx_ocv_mat* src);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_get_edge_image(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_get_gradient_image(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_get_segments_count(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    int* group_count,
    int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_get_segments_fill(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_ximgproc_point* points,
    int point_capacity,
    int* group_count,
    int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_detect_lines(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    jyppx_ocv_mat* lines);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_detect_lines_count(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_detect_lines_fill(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    float* lines,
    int line_capacity,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_get_segment_indices_of_lines_count(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    int* index_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_drawing_get_segment_indices_of_lines_fill(
    jyppx_ocv_ximgproc_edge_drawing* detector,
    int* indices,
    int index_capacity,
    int* index_count);