src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_lambda")]
        internal static partial int XImgProcEdgeAwareInterpolatorSetLambda(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_use_post_processing")]
        internal static partial int XImgProcEdgeAwareInterpolatorGetUsePostProcessing(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_use_post_processing")]
        internal static partial int XImgProcEdgeAwareInterpolatorSetUsePostProcessing(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_fgs_lambda")]
        internal static partial int XImgProcEdgeAwareInterpolatorGetFgsLambda(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_fgs_lambda")]
        internal static partial int XImgProcEdgeAwareInterpolatorSetFgsLambda(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_fgs_sigma")]
        internal static partial int XImgProcEdgeAwareInterpolatorGetFgsSigma(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_fgs_sigma")]
        internal static partial int XImgProcEdgeAwareInterpolatorSetFgsSigma(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_k")]
        internal static partial int XImgProcRICInterpolatorGetK(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_k")]
        internal static partial int XImgProcRICInterpolatorSetK(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_size")]
        internal static partial int XImgProcRICInterpolatorGetSuperpixelSize(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_size")]
        internal static partial int XImgProcRICInterpolatorSetSuperpixelSize(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_nn_count")]
        internal static partial int XImgProcRICInterpolatorGetSuperpixelNNCount(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_nn_count")]
        internal static partial int XImgProcRICInterpolatorSetSuperpixelNNCount(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_ruler")]
        internal static partial int XImgProcRICInterpolatorGetSuperpixelRuler(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_ruler")]
        internal static partial int XImgProcRICInterpolatorSetSuperpixelRuler(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_mode")]
        internal static partial int XImgProcRICInterpolatorGetSuperpixelMode(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_mode")]
        internal static partial int XImgProcRICInterpolatorSetSuperpixelMode(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_alpha")]
        internal static partial int XImgProcRICInterpolatorGetAlpha(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_alpha")]
        internal static partial int XImgProcRICInterpolatorSetAlpha(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_model_iter")]
        internal static partial int XImgProcRICInterpolatorGetModelIter(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_model_iter")]
        internal static partial int XImgProcRICInterpolatorSetModelIter(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_refine_models")]
        internal static partial int XImgProcRICInterpolatorGetRefineModels(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_refine_models")]
        internal static partial int XImgProcRICInterpolatorSetRefineModels(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_max_flow")]
        internal static partial int XImgProcRICInterpolatorGetMaxFlow(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_max_flow")]
        internal static partial int XImgProcRICInterpolatorSetMaxFlow(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_use_variational_refinement")]
        internal static partial int XImgProcRICInterpolatorGetUseVariationalRefinement(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_use_variational_refinement")]
        internal static partial int XImgProcRICInterpolatorSetUseVariationalRefinement(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_use_global_smoother_filter")]
        internal static partial int XImgProcRICInterpolatorGetUseGlobalSmootherFilter(IntPtr interpolator, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_use_global_smoother_filter")]
        internal static partial int XImgProcRICInterpolatorSetUseGlobalSmootherFilter(IntPtr interpolator, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_fgs_lambda")]
        internal static partial int XImgProcRICInterpolatorGetFgsLambda(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_fgs_lambda")]
        internal static partial int XImgProcRICInterpolatorSetFgsLambda(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_fgs_sigma")]
        internal static partial int XImgProcRICInterpolatorGetFgsSigma(IntPtr interpolator, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_fgs_sigma")]
        internal static partial int XImgProcRICInterpolatorSetFgsSigma(IntPtr interpolator, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_create")]
        internal static partial int XImgProcEdgeDrawingCreate(out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_release_handle")]
        internal static partial void XImgProcEdgeDrawingReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_params")]
        internal static partial int XImgProcEdgeDrawingGetParams(IntPtr detector, out XImgProcEdgeDrawingParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_set_params")]
        internal static partial int XImgProcEdgeDrawingSetParams(IntPtr detector, ref XImgProcEdgeDrawingParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_edges")]
        internal static partial int XImgProcEdgeDrawingDetectEdges(IntPtr detector, IntPtr src);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_edge_image")]
        internal static partial int XImgProcEdgeDrawingGetEdgeImage(IntPtr detector, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_gradient_image")]
        internal static partial int XImgProcEdgeDrawingGetGradientImage(IntPtr detector, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segments_count")]
        internal static partial int XImgProcEdgeDrawingGetSegmentsCount(IntPtr detector, out int groupCount, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segments_fill")]
        internal static partial int XImgProcEdgeDrawingGetSegmentsFill(IntPtr detector, int[] offsets, int offsetCapacity, XImgProcPointNative[] points, int pointCapacity, out int groupCount, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_lines")]
        internal static partial int XImgProcEdgeDrawingDetectLines(IntPtr detector, IntPtr lines);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_lines_count")]
        internal static partial int XImgProcEdgeDrawingDetectLinesCount(IntPtr detector, out int lineCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_lines_fill")]
        internal static partial int XImgProcEdgeDrawingDetectLinesFill(IntPtr detector, float[] lines, int lineCapacity, out int lineCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segment_indices_of_lines_count")]
        internal static partial int XImgProcEdgeDrawingGetSegmentIndicesOfLinesCount(IntPtr detector, out int indexCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segment_indices_of_lines_fill")]
        internal static partial int XImgProcEdgeDrawingGetSegmentIndicesOfLinesFill(IntPtr detector, int[] indices, int indexCapacity, out int indexCount);
